increase the z-index of the the mobile nav, to stop the slider from being above it.

--- a/wp-content/themes/sydneytheme/style.css
+++ b/wp-content/themes/sydneytheme/style.css
@@ -122,7 +122,7 @@ TYPOGRAPHY
 .nav__hamburger-icon {
   display: inline-block;
   cursor: pointer;
-  z-index: 2;
+  z-index: 100;
   position: absolute;
   top: 30px;
   right: 20px; }
@@ -163,7 +163,7 @@ TYPOGRAPHY
   animation-duration: 0.3s;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 99;
   opacity: 1; }
 
 @keyframes slidein {
@@ -177,8 +177,7 @@ TYPOGRAPHY
   display: flex; }
   @media (min-width: 48em) {
     .slider {
-      height: 670px;
-      overflow: visible; } }
+      height: 670px; } }
   @media (min-width: 87em) {
     .slider {
       height: 870px; } }
